--- a/dolphinscheduler-quantum/pom.xml
+++ b/dolphinscheduler-quantum/pom.xml
@@ -46,6 +46,10 @@
             <groupId>org.apache.dolphinscheduler</groupId>
             <artifactId>dolphinscheduler-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-api</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <testResources>
