--- a/quantum-composer/package.json
+++ b/quantum-composer/package.json
@@ -20,8 +20,8 @@
     "karma": "~5.2.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-firefox-launcher": "~1.3.0",
-    "traceur": "0.0.111",
-    "puppeteer": "^5.3.0"
+    "puppeteer": "^5.3.0",
+    "traceur": "0.0.111"
   },
   "scripts": {
     "build": "grunt build-src",
@@ -33,5 +33,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Strilanc/Quirk.git"
+  },
+  "dependencies": {
+    "jquery": "^3.6.2"
   }
 }
