--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "file:///Users/mz01-luyendd/Desktop/MGZ/hpc-cloud/quantum-composer/out/quirk.html",
+            "url": "http://127.0.0.1:5199/projects/1/7969552542400/circuit/1",
             "webRoot": "${workspaceFolder}"
         }
     ]
